# SparkCode

./: .gitignore  CLAUDE.md  README.md  SPARK.md  install-cn.cmd  install.cmd  package.json  sparkc.cmd
.github/workflows/: build.yml  release.yml
docs/: 00-project-structure.md  01-buddy.md  02-kairos.md  03-ultraplan.md  05-hidden-commands.md  06-bridge.md  07-feature-gates.md  spark-code-tui-capabilities.md
scripts/: install.ps1  install.sh  package-release.sh
sparkcode-app/: .gitignore  index.html  package.json  vite.config.ts
sparkcode-app/electron/: main.cjs  preload.cjs
sparkcode-app/scripts/: prepare-backend-resource.mjs
sparkcode-app/src/: App.tsx  main.tsx  styles.css  types.ts
sparkcode-app/src-tauri/: Cargo.toml  tauri.conf.json
sparkcode-app/src-tauri/capabilities/: default.json
sparkcode-app/src-tauri/icons/: icon.icns
sparkcode-app/src-tauri/src/: lib.rs  main.rs
sparkcode-vscode-extension/: README.md  package-lock.json  package.json  tsconfig.json
sparkcode-vscode-extension/src/: extension.ts
src/: QueryEngine.ts  Tool.ts  commands.ts  context.ts  dev-entry.ts  dialogLaunchers.tsx  history.ts  interactiveHelpers.tsx  main.tsx  projectOnboardingState.ts  replLauncher.tsx  setup.ts  tools.ts
src/bootstrap/: state.ts
src/bridge/: bridgeApi.ts  bridgeEnabled.ts  bridgeMain.ts  bridgeMessaging.ts  bridgePointer.ts  bridgeStatusUtil.ts  createSession.ts  envLessBridgeConfig.ts  initReplBridge.ts  remoteBridgeCore.ts  replBridge.ts  replBridgeTransport.ts  trustedDevice.ts  types.ts  workSecret.ts
src/buddy/: CompanionSprite.tsx  (+1 more)
(+925 files in other folders)
